# github-artifact

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  github-artifact.js  push.sh  run.sh
docs/: github-artifact.js  index.html
src/: main.rs
static/: github-artifact.js  index.html
