[package]
name = "github-artifact"
version = "0.1.3"
publish = false
edition = "2018"

[[bin]]
name = "github-artifact"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"

[dev-dependencies]
cargo-watch = "7.5"
